// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CreditCardForm /> should match its snapshot with custom props 1`] = `
Array [
  <div
    className="k-u-margin-bottom-triple"
  >
    <div
      className="k-u-margin-bottom-single"
    >
      <div
        className="sc-bxivhb hJahMD k-Line"
        style={
          Object {
            "lineHeight": 1,
          }
        }
      >
        <div
          className="k-Line__item"
        >
          <label
            className="sc-bwzfXH cMCtnU k-Label k-Label--normal"
            htmlFor="frmCCNum"
            onClick={[Function]}
          >
            Numéro de carte
            <span
              className="k-Label--pill"
              style={
                Object {
                  "--pill-color": null,
                  "--pill-height": null,
                  "--pill-width": null,
                }
              }
            >
              •
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      className="k-FieldInput sc-bdVaJa jtFJJk k-u-margin-top-single"
    >
      <input
        autoComplete="cc-number"
        className="sc-ifAKCX ehlBZJ k-Form-TextInput k-Form-TextInput--orion k-Form-TextInput--regular"
        disabled={false}
        id="frmCCNum"
        inputMode="numeric"
        name="cardnumber"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseUp={[Function]}
        placeholder="#### #### #### #######"
        type="text"
        value=""
      />
    </div>
  </div>,
  <div
    className="k-u-margin-bottom-triple"
  >
    <div
      className="k-u-margin-bottom-single"
    >
      <div
        className="sc-bxivhb hJahMD k-Line"
        style={
          Object {
            "lineHeight": 1,
          }
        }
      >
        <div
          className="k-Line__item"
        >
          <label
            className="sc-bwzfXH cMCtnU k-Label k-Label--normal"
            htmlFor="frmCCExp"
            onClick={[Function]}
          >
            Date de validité
            <span
              className="k-Label--pill"
              style={
                Object {
                  "--pill-color": null,
                  "--pill-height": null,
                  "--pill-width": null,
                }
              }
            >
              •
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      className="k-FieldInput k-u-margin-top-single"
    >
      <input
        autoComplete="cc-exp"
        className="sc-ifAKCX ehlBZJ k-Form-TextInput k-Form-TextInput-hasDigits k-Form-TextInput-hasDigits_6 k-Form-TextInput--orion k-Form-TextInput--regular"
        disabled={false}
        id="frmCCExp"
        inputMode="numeric"
        name="cc-exp"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseUp={[Function]}
        placeholder="MM/AA"
        style={
          Object {
            "--input-content-width": 6,
          }
        }
        type="text"
        value=""
      />
    </div>
  </div>,
  <div
    className="k-u-margin-bottom-triple"
  >
    <div
      className="k-u-margin-bottom-single"
    >
      <div
        className="sc-bxivhb hJahMD k-Line"
        style={
          Object {
            "lineHeight": 1,
          }
        }
      >
        <div
          className="k-Line__item"
        >
          <label
            className="sc-bwzfXH cMCtnU k-Label k-Label--normal"
            htmlFor="frmCCCVC"
            onClick={[Function]}
          >
            Cryptogramme visuel
            <span
              className="k-Label--pill"
              style={
                Object {
                  "--pill-color": null,
                  "--pill-height": null,
                  "--pill-width": null,
                }
              }
            >
              •
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      className="k-FieldInput k-u-margin-top-single"
    >
      <input
        autoComplete="cc-csc"
        className="sc-ifAKCX ehlBZJ k-Form-TextInput k-Form-TextInput-hasDigits k-Form-TextInput-hasDigits_6 k-Form-TextInput--orion k-Form-TextInput--regular"
        disabled={false}
        id="frmCCCVC"
        inputMode="numeric"
        name="cvc"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseUp={[Function]}
        placeholder="###"
        style={
          Object {
            "--input-content-width": 6,
          }
        }
        type="text"
        value=""
      />
    </div>
  </div>,
]
`;

exports[`<CreditCardForm /> should match its snapshot with default props 1`] = `
Array [
  <div>
    <label
      htmlFor="frmCCNum"
    >
      Card Number
    </label>
    <input
      autoComplete="cc-number"
      className="sc-bdVaJa jtFJJk"
      id="frmCCNum"
      inputMode="numeric"
      name="cardnumber"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseUp={[Function]}
      placeholder="#### #### #### #######"
      type="text"
      value=""
    />
  </div>,
  <div>
    <label
      htmlFor="frmCCExp"
    >
      Card Number
    </label>
    <input
      autoComplete="cc-exp"
      id="frmCCExp"
      inputMode="numeric"
      name="cc-exp"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseUp={[Function]}
      placeholder="MM/YY"
      type="text"
      value=""
    />
  </div>,
  <div>
    <label
      htmlFor="frmCCCVC"
    >
      Card Number
    </label>
    <input
      autoComplete="cc-csc"
      id="frmCCCVC"
      inputMode="numeric"
      name="cvc"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseUp={[Function]}
      placeholder="###"
      type="text"
      value=""
    />
  </div>,
]
`;
